# fm_synth_classic

./: Cargo.toml  README.md  build.sh  debug.html  index_wasm.html
.github/workflows/: deploy.yml
src/: lib.rs  main.rs
