[package]
name = "fm_synth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fm_synth"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cpal = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "AudioContext",
  "OscillatorNode", 
  "OscillatorType",
  "GainNode",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "Window",
]

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
